# funkyImp

./: .gitmodules  Makefile  configure  copylibs.sh  copystdlib.sh  install.sh  mergeRT.sh  openjdk.properties  recopy.sh  reinstall.sh  test.cpp  test.hint  test.sh  uninstall.sh
backend/RunTime/include/: AddressFixedArray.h  LinearArray.h  Persistent.h  PersistentArray.h  Scheduler.h  Task.h  (+9 more)
backend/pthread_redirect/: pthread.h
backend/tbb4/: Makefile  found.txt  make.txt
config/: all.properties  atom.properties  default.properties  fit.wxm  fit_cor.wxm  fit_toh.wxm  many.properties  mem.properties  nehalem.properties  nehalem_no_ht.properties  zero.properties
gdb/: .gdbinit  gdbinit
input/: basic_types.funky  class.funky  domains.funky  ext_decl.funky  file.imp  function.funky  interface.funky  keep_type.funky  select.funky  shift_args.funky  singular.funky  unique.funky  where.funky
input/current/: DepGraphPathTest.funky  Import.funky  LinTest.funky  Makefile  array_t.funky  bintree.funky  block.funky  block_perf.f  blur.funky  bounds.f  branch.funky  bttest.funky  build_graph.funky  cur.f  cur.funky  cur.java  dom.funky  domain.f  dyn.funky  dynblock.f  export.funky  fib.funky  fileio.funky  fileread.funky  garbage.funky  graph.f  graph_walk.funky  group.funky  keypress.funky  matmult_perf.funky  ogl.funky  paperSchedule.f  particles.f  partsim.f  prob.f  run.f  scale_col.f  template.funky  template_stdlib.funky  test.funky  (+8 more)
javac/langtools/: README  build.properties
mpi/benchmarks/: fib_100.funky  fib_10000.funky  fib_1000000.funky  fib_100000000.funky  jacobi.funky  jacobi_100.funky  jacobi_10000.funky  jacobi_1000000.funky  jacobi_100000000.funky
mpi/common/: funkympi.cpp  funkympi.h
mpi/log_analyzer/: debugger.py  main.py
mpi/scheduler/: main.cpp  makefile  scheduler.cpp  scheduler.h  scheduler.run
opencl/: README
opencl/AutomatedTest/: analyze.sh  automated.properties  clean.sh  execute.sh  generate.sh  recopy.sh
opencl/BackupsCurFile/: cur-2d-Benchmark.f  cur-2d.f  cur-3d.f  cur-blur.f  cur-branches.f  cur-fail.f  cur-full.f  cur-linear.f  cur-transposeRRR.f
opencl/BenchmarkSuite/OpenCL-Test2/OpenCL-Test2/: AccumulatedReportGenerator.cpp  AccumulatedReportGenerator.h  AlternateMeasureKernelProvider.cpp  AlternateMeasureKernelProvider.h  BenchmarkRunner.cpp  BenchmarkRunner.h  CMakeLists.txt  EmptyKernelBaseCostProvider.cpp  EmptyKernelBaseCostProvider.h  KernelProvider.cpp  KernelProvider.h  MemoryAccessComplexityComparisonProvider.cpp  MemoryAccessComplexityComparisonProvider.h  MemoryAccessComplexityKernelProvider.cpp  MemoryAccessComplexityKernelProvider.h  MemoryAccessKernelProvider.cpp  MemoryAccessKernelProvider.h  MemoryAccessPatternKernelProvider.cpp  MemoryAccessPatternKernelProvider.h  MemoryTransferKernelProvider.cpp  MemoryTransferKernelProvider.h  MultipleBasicOperationsKernelProvider.cpp  MultipleBasicOperationsKernelProvider.h  MultipleMemoryAccessesKernelProvider.cpp  MultipleMemoryAccessesKernelProvider.h  OpenCL_Test2.1  ResultAnalyzer.cpp  ResultAnalyzer.h  TableGenerator.cpp  TableGenerator.h  Utilities.cpp  Utilities.h  WorkgroupSizeKernelProvider.cpp  WorkgroupSizeKernelProvider.h  config.h  main.cpp  matmult.cl  ocl.cpp  ocl.h  transpose.cl
opencl/Benchmarks/: AnotherTest.sciprj  AutomatedMeasurements19.5.sciprj  Benchmarks GPU.txt  Benchmarks Raw Final.txt  BenchmarksRound2.sciprj  BenchmarksRound2.sciprj~  Coalesced-Uncoalesced.sciprj  Comparison Int-Float.sciprj  EvenMore.sciprj  GPU-Kernel-Runtime.qtt  Initial Benchmarks.sciprj~  Matrix Transpose 24.3.sciprj  Measurements 1.3.sciprj  Measurements 21.3.sciprj  Measurements AMD 8870M.sciprj  Measures 25.2.14.sciprj  Memory Read Speed comparison.sciprj  MemoryAccesses.sciprj  Multiple Memory Accesses.sciprj  MultipleOperations.sciprj  Performance Branching.xlsx  Performancevergleich CPU-GPU.xlsx  PredictedVsActual10.3.sciprj  Quadro K4000 Measurements.sciprj  RealityCheck12.3.sciprj  RuntimevsPrediction.sciprj  Untitled.sciprj  Work-Group Size Influence.sciprj  WorkgroupSize-Influence.sciprj  backTimes  compileTimes  copyTimes  distribution.sciprj  failedBenchmarks.xlsx  operation times in respect to size of array.sciprj  operationDurationAttempt.sciprj  runTimes  scratchbox.sciprj  strangeMeasurements.sciprj  test
opencl/Literature/: links.txt
opencl/PastedMisc/: dump.txt  newOpData.txt
opencl/ResultStatisticsGenerator/: build.xml
opencl/TestResultQualityCheck/: build.xml
opencl/Thesis/: main.tex  makefile  thesis.sublime-project  thesis.sublime-workspace
persistence/: ssse3_popcount  ssse3_popcount.c
persistence/PersistenceTest/: bitcount.cpp  bitcount.hpp  main.cpp  persistence.hpp  wRefCounter.hpp
scripts/: Blur.funky  Graph.funky  LinearEqu.funky  Passwords  equation.equ
scripts/ServerScript/: install  run  server conf
srclib/: README
srclib/anarres-cpp-src-1.2.6/: _nbbuild.xml  nbbuild.xml  res.txt
srclib/barvinok-0.35/: GIT_HEAD_ID  Makefile.in  aclocal.m4  barvinok.pc  config  config.h  config.h.in  configure  iscc.c  isl.py  version.h
srclib/barvinok-0.35/isl-polylib/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  isl-polylib.pc
srclib/ibarvinok/: Makefile  ibarvinoc.c  ibarvinok.h  isl_obj_list.c  isl_obj_str.c
srclib/jgrapht-0.8.2/: build.xml  nbbuild.xml
syntax coloring/: funky.lang  info
(+994 files in other folders)
